--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -32,3 +32,4 @@ jobs:
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "damp-journey-95242" #Must be unique in Heroku
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
