Full stack open 2022 osa 11.11

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,3 +33,5 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "damp-journey-95242" #Must be unique in Heroku
           heroku_email: ${{secrets.HEROKU_EMAIL}}
+          healthcheck: "https://damp-journey-95242.herokuapp.com/health"
+          checkstring: "ok"
