--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -22,3 +22,5 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+        if: ${{ contains(env.COMMIT_MESSAGES, '#skip') }}
+        run: echo skip detected
