--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -3,7 +3,7 @@ name: Testing stuff
 on:
   push:
     branches:
-      - master
+      - new_branch
 
 jobs:
   a_test_job:
@@ -22,5 +22,8 @@ jobs:
         env:
           COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}
         run: echo "$COMMIT_MESSAGES"
+      - name: skip detection
+        env:
+          COMMIT_MESSAGES: ${{ toJson(github.event.commits.*.message) }}  
         if: ${{ contains(env.COMMIT_MESSAGES, '#skip') }}
         run: echo skip detected
