--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -42,6 +42,22 @@ jobs:
           healthcheck: "https://damp-journey-95242.herokuapp.com/health"
           checkstring: "ok"
           rollbackonhealthcheckfailed: true
+      - name: Test Success
+        uses: rjstone/discord-webhook-notify@v1
+        if: success()
+        with:
+            severity: info
+            text: A new version of Pokedex deployed
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+      - name: Test Failure
+        uses: rjstone/discord-webhook-notify@v1
+        if: failure()
+        with:
+            severity: error
+            text: Build failed
+            webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+
+
   tag_release:
     needs: [simple_deployment_pipeline]
     runs-on: ubuntu-20.04
