--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -48,6 +48,7 @@ jobs:
         with:
             severity: info
             text: A new version of Pokedex deployed
+            details:
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
       - name: Test Failure
         uses: rjstone/discord-webhook-notify@v1
@@ -55,6 +56,7 @@ jobs:
         with:
             severity: error
             text: Build failed
+            details: 
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
 
 
