--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -47,7 +47,7 @@ jobs:
         if: ${{ github.event_name == 'push'  && success()}}
         with:
             severity: info
-            text: A new version of Pokedex deployed
+            text: A new version of Phonebook deployed
             description:
             details: to https://damp-journey-95242.herokuapp.com/ by ${{ github.actor}}
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
@@ -58,7 +58,7 @@ jobs:
             severity: error
             text: Build failed
             description: commit
-            details: 'https://github.com/msaari102/full-stack-open-pokedex/commit/${{github.sha}} by ${{github.actor}} broke the build :('
+            details: 'https://github.com/msaari102/osa11/commit/${{github.sha}} by ${{github.actor}} broke the build :('
             webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}    
 
   tag_release:
